# foomatic-db-nonfree

./: COPYING  ChangeLog  ChangeLog.nonfree  Makefile.in  README  USAGE  configure.ac
db/source/PPD/Genicom/: GN28PPM.PPD  GNLN2101.PPD  GNLN2801.PPD  GNLN4501.PPD  GNLNM401.PPD  GNML2101.PPD  GNML2801.PPD  GNML3201.PPD  GNML401+.PPD  GNML4011.PPD  GNML4501.PPD  gncl1601.ppd  gnml2111.ppd  gnml2601.ppd  gnml280+.ppd  gnml4021.ppd
db/source/PPD/Kyocera/en/: Kyocera_FS-1714M_en.ppd
db/source/PPD/Sharp/: shc260fj.ppd
db/source/PPD/Test/: Test-XX100-PXL.ppd
db/source/driver/: Postscript-Dell.xml  Postscript-Genicom.xml  Postscript-Lexmark-black-only.xml  Postscript-Lexmark.xml  Postscript-Oce-KM.xml  Postscript-Xerox.xml  Test.xml  epson-201101w.xml  epson-201102j.xml  epson-201102w.xml  epson-201103j.xml  epson-201104w.xml  epson-201105j.xml  epson-201105w.xml  epson-201106j.xml  epson-201106w.xml  epson-201107w.xml  epson-201108j.xml  epson-201108w.xml  epson-201109w.xml  epson-201110j.xml  epson-201110w.xml  epson-201111j.xml  epson-201111w.xml  epson-201112j.xml  epson-201112w.xml  epson-201113j.xml  epson-201113w.xml  epson-201114j.xml  epson-201114w.xml  epson-201115j.xml  epson-201115w.xml  epson-201201w.xml  epson-201202w.xml  epson-201203j.xml  epson-201203w.xml  epson-201204j.xml  epson-201204w.xml  epson-201205j.xml  epson-201206w.xml  (+59 more)
db/source/opt/: drv_z42-Resolution.xml
db/source/printer/: KONICA_MINOLTA-magicolor_2530_DL.xml  Minolta-magicolor_2300W.xml  Oce-im5530.xml
